--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <input type="checkbox" id="seven">
   <div id="page8" class="page">
-    <div class="front"><img src="Gambar/bianca7.jpg"></div>
+    <div class="front"><img src="Gambar/bianca7.webp"></div>
     <div class="back">Ku rindu dengan suara indahmu</div>
     <label for="seven"></label>
   </div>
@@ -87,3 +87,4 @@
 </body>
 
 </html>
+
